# asterinas

./: .code-workspace  .dockerignore  .envrc  .gitattributes  .gitignore  .licenserc.json  .licenserc.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  COPYRIGHT  Cargo.toml  Components.toml  DOCKER_IMAGE_VERSION  LICENSE.md  Makefile  OSDK.toml  PLAN_Td_FIX.md  README.md  README_CN.md  README_JP.md  README_RU.md  RELEASES.md  build.rs  changes.diff  claude-impl-report.md  clippy.toml  collect_heap_trace.py  flake.nix  heap_trace.folded  index.html  plan.md  research.md  rust-toolchain.toml  rustfmt.toml  start_linux.sh  triagebot.toml  x86_64-custom.json
framework/jinux-frame/: Cargo.toml  build.rs
framework/jinux-frame/src/: config.rs  console.rs  cpu.rs  error.rs  io_mem.rs  lib.rs  linux_boot.rs  logger.rs  mem_storage.rs  mmio.rs  panicking.rs  test.rs  timer.rs  user.rs
framework/libs/atomic-mode-proc-macro/: Cargo.toml
kernel/: Cargo.toml  Makefile  README.md  main.rs
kernel/aster-nix/: Cargo.toml
kernel/aster-nix/src/: console.rs  context.rs  cpu.rs  error.rs  lib.rs  prelude.rs  taskless.rs  vdso.rs
kernel/comps/: README.md
kernel/comps/block/: Cargo.toml
kernel/comps/cmdline/: Cargo.toml
kernel/comps/console/: Cargo.toml
kernel/comps/crypto/: Cargo.toml
kernel/comps/device/: Cargo.toml
kernel/comps/device-mapper/: Cargo.toml
kernel/comps/drm/: Cargo.toml
kernel/comps/framebuffer/: Cargo.toml
kernel/comps/goldfish/: Cargo.toml
kernel/comps/i8042/: Cargo.toml
kernel/comps/i8042_controller/: Cargo.toml
kernel/comps/input/: Cargo.toml
kernel/comps/keyboard/: Cargo.toml
kernel/comps/logger/: Cargo.toml
kernel/comps/mlsdisk/: Cargo.toml
kernel/comps/mouse/: Cargo.toml
kernel/comps/network/: Cargo.toml
kernel/comps/nvme/: Cargo.toml
kernel/comps/pci/: Cargo.toml
kernel/comps/softirq/: Cargo.toml
kernel/comps/systree/: Cargo.toml
kernel/comps/time/: Cargo.toml
kernel/comps/uart/: Cargo.toml
kernel/comps/virtio/: Cargo.toml
kernel/core/: Cargo.toml
kernel/core/src/: cpu.rs  init.rs  lib.rs  vdso.rs
kernel/ktest-runner/: Cargo.toml
kernel/ktest-runner/src/: lib.rs
kernel/libs/aster-bigtcp/: Cargo.toml
kernel/libs/aster-fuse/: Cargo.toml  README.md
kernel/libs/aster-page-allocator/: Cargo.toml
kernel/libs/aster-rights/: Cargo.toml
kernel/libs/aster-rights-proc/: Cargo.toml
kernel/libs/aster-util/: Cargo.toml
kernel/libs/atomic-integer-wrapper/: Cargo.toml
kernel/libs/blake2s/: Cargo.toml
kernel/libs/cpio-decoder/: Cargo.toml
kernel/libs/device-id/: Cargo.toml
kernel/libs/int-to-c-enum/: Cargo.toml  README.md
kernel/libs/io-util/: Cargo.toml
kernel/libs/io_util/: Cargo.toml
kernel/libs/jhash/: Cargo.toml
kernel/libs/keyable-arc/: Cargo.toml
kernel/libs/ksym-bin/: Cargo.toml  README.en.md  README.md
kernel/libs/logo-ascii-art/: Cargo.toml  README.md
kernel/libs/ring-buffer/: Cargo.toml
kernel/libs/short-vis-path/: Cargo.toml  README.md
kernel/libs/sparse-id-alloc/: Cargo.toml
kernel/libs/typeflags/: Cargo.toml
kernel/libs/typeflags-util/: Cargo.toml
kernel/libs/xarray/: Cargo.toml
kernel/src/: context.rs  cpu.rs  error.rs  init.rs  kcmdline.rs  lib.rs  oops.rs  prelude.rs  taskless.rs  vdso.rs  wait.rs  wake.rs
kernel/src/arch/: mod.rs
kernel/src/bpf/: link.rs  mod.rs  prog.rs  uapi.rs
kernel/src/device/: char.rs  disk.rs  evdev.rs  event.rs  fb.rs  full.rs  hwrng.rs  mod.rs  null.rs  random.rs  shm.rs  urandom.rs  virtio_blk.rs  zero.rs
kernel/src/driver/: mod.rs
kernel/src/events/: events.rs  io_events.rs  mod.rs  observer.rs  subject.rs
kernel/src/fs/: device.rs  file_handle.rs  file_table.rs  fs_resolver.rs  inode_handle.rs  kernel_config.rs  manager.rs  mod.rs  named_pipe.rs  pipe.rs  pseudofs.rs  registry.rs  rootfs.rs  thread_info.rs
kernel/src/io_uring/: c_types.rs  io_context.rs  io_wq.rs  mod.rs  register.rs  sqpoll.rs  thread.rs  utils.rs
kernel/src/ipc/: ipc_ids.rs  ipc_ns.rs  mod.rs
kernel/src/namespace/: mod.rs  ns_file.rs  user.rs  uts.rs
kernel/src/net/: mod.rs  net_ns.rs  uts_ns.rs
kernel/src/page_cache/: cache_page.rs  mod.rs
kernel/src/process/: clone.rs  execve.rs  exit.rs  kill.rs  mod.rs  nsproxy.rs  pid_file.rs  pid_table.rs  process_filter.rs  process_table.rs  rlimit.rs  stats.rs  status.rs  task_set.rs  unshare.rs  user_ns.rs  wait.rs
kernel/src/sched/: mod.rs  nice.rs  priority.rs  priority_scheduler.rs
kernel/src/security/: mod.rs  tsm.rs  tsm_mr.rs
kernel/src/syscall/: accept.rs  access.rs  alarm.rs  arch_prctl.rs  bind.rs  bpf.rs  brk.rs  capget.rs  capset.rs  chdir.rs  chmod.rs  chown.rs  chroot.rs  clock_gettime.rs  clone.rs  close.rs  connect.rs  dup.rs  (+177 more)
osdk/: .gitignore  Cargo.toml  README.md  rustfmt.toml
osdk/src/: arch.rs  bin.rs  bundle.rs  cli.rs  error.rs  main.rs  target.rs  util.rs  utils.rs  vm_image.rs
osdk/test-kernel/: Cargo.toml
osdk/tests/: bin.rs  integration.rs
osdk/tools/: Dockerfile.ubuntu22.04  build_image.sh  run_container.sh
ostd/: Cargo.toml  README.md  build.rs
ostd/src/: bus.rs  console.rs  coverage.rs  cpu.rs  error.rs  ex_table.rs  io_mem.rs  ksym.rs  lib.rs  logger.rs  minicov.rs  numa.rs  panic.rs  panicking.rs  power.rs  prelude.rs  smp.rs  user.rs  util.rs
runner/: Cargo.toml  runner.py
runner/grub/: grub.cfg.template
runner/src/: gdb.rs  main.rs
src/: Cargo.toml  Components.toml  README.md  build.rs  rust-toolchain.toml  x86_64-custom.json
src/.cargo/: config.toml
src/jinux-boot/: Cargo.toml
src/kxos/: Cargo.toml
src/kxos-boot/: Cargo.toml
src/kxos-frame/: Cargo.toml
src/kxos-frame-pod-derive/: Cargo.toml
src/kxos-pci/: Cargo.toml
src/kxos-rights-proc/: Cargo.toml
src/kxos-std/: Cargo.toml
src/kxos-typeflags/: Cargo.toml
src/kxos-typeflags-util/: Cargo.toml
src/kxos-util/: Cargo.toml
src/kxos-virtio/: Cargo.toml
src/ramdisk/: Makefile
src/src/: main.rs
src/tests/: console_input.rs  framebuffer.rs  rtc.rs  test_example.rs  timer_test.rs
test/nixos/: Cargo.toml  Makefile  README.md
tools/sctrace/: Cargo.toml  README.md
(+7897 files in other folders)
