# The Cargo workspace configurations shared by all in-kernel crates.
#
# As a kernel project, most crates in Asterinas are written and built for the kernel space.
# But there are also a few userspace crates
# whose crate-level `Cargo.toml` files are not affected by this workspace-level `Cargo.toml`.
# The complete list can be found in the `workspace.exclude` field.

[workspace]
resolver = "2"
members = [
    "osdk/deps/frame-allocator",
    "osdk/deps/heap-allocator",
    "osdk/deps/test-kernel",
    "ostd",
    "ostd/libs/align_ext",
    "ostd/libs/ostd-macros",
    "ostd/libs/id-alloc",
    "ostd/libs/linux-bzimage/builder",
    "ostd/libs/linux-bzimage/boot-params",
    "ostd/libs/linux-bzimage/setup",
    "ostd/libs/ostd-test",
    "kernel",
    "kernel/comps/block",
    "kernel/comps/cmdline",
    "kernel/comps/console",
    "kernel/comps/framebuffer",
    "kernel/comps/input",
    "kernel/comps/i8042",
    "kernel/comps/network",
    "kernel/comps/softirq",
    "kernel/comps/systree",
    "kernel/comps/logger",
    "kernel/comps/mlsdisk",
    "kernel/comps/time",
    "kernel/comps/virtio",
    "kernel/comps/pci",
    "kernel/libs/cpio-decoder",
    "kernel/libs/int-to-c-enum",
    "kernel/libs/int-to-c-enum/derive",
    "kernel/libs/aster-rights",
    "kernel/libs/aster-rights-proc",
    "kernel/libs/aster-util",
    "kernel/libs/aster-bigtcp",
    "kernel/libs/device-id",
    "kernel/libs/jhash",
    "kernel/libs/keyable-arc",
    "kernel/libs/logo-ascii-art",
    "kernel/libs/typeflags",
    "kernel/libs/typeflags-util",
    "kernel/libs/atomic-integer-wrapper",
    "kernel/libs/xarray",
]
exclude = [
    "kernel/libs/comp-sys/cargo-component",
    "kernel/libs/comp-sys/component",
    "kernel/libs/comp-sys/component-macro",
    "kernel/libs/comp-sys/controlled",
    "osdk",
    "tools/sctrace",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ktest)'] }

[workspace.lints.clippy]
allow_attributes = "warn"

# Keys under `workspace.package` and the `package` section of each crate 
# follow the ordering suggested at: 
# https://github.com/crate-ci/cargo-cargofmt/issues/29#issuecomment-3647516745
# 
# FIXME: The current key order is not yet finalized.
# Once `cargo-cargofmt` becomes stable, we will use it to enforce a consistent key order.
[workspace.package]
version = "0.17.0"
repository = "https://github.com/asterinas/asterinas"
license = "MPL-2.0"
edition = "2024"

# Cargo only looks at the profile settings 
# in the Cargo.toml manifest at the root of the workspace

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

# Release profile configuration with Link Time Optimization (LTO) enabled.
#
# This profile is optimized for maximum runtime performance, 
# (achieving a 2% reduction in latency for the getpid system call).
# However, enabling LTO significantly increases compilation times,
# approximately doubling them compared to when LTO is not enabled.
[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1
