[package]
name = "asterinas"
version = "0.1.0"
edition.workspace = true

[dependencies]
aster-core.workspace = true
ostd.workspace = true

[features]
default = ["cvm_guest"]
coverage = ["aster-core/coverage"]
cvm_guest = ["aster-core/cvm_guest"]
riscv_sv39_mode = ["aster-core/riscv_sv39_mode"]

[lints]
workspace = true
