[package]
name = "cargo-osdk"
version = "0.4.2"
edition = "2021"
description = "Accelerate OS development with Asterinas OSDK"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/asterinas/asterinas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.linux-bzimage-builder]
git = "https://github.com/asterinas/asterinas"
# Make sure it syncs with `crate::util::ASTER_GIT_REV`
rev = "c9b66bd"
# When publishing, the crate.io version is used, make sure
# the builder is published
# FIXME: The version is currently commented out as it is no longer in use. 
# If this version is being used, 
# please ensure to update `bump_version.sh` appropriately. 
# `bump_version.sh will also update this version, 
# however, the dependent crate may not share the same version as the whole project.
# version = "0.1.0"

[dependencies]
clap = { version = "4.4.17", features = ["cargo", "derive"] }
env_logger = "0.11.0"
indexmap = "2.2.1"
lazy_static = "1.4.0"
log = "0.4.20"
quote = "1.0.35"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
shlex = "1.3.0"
syn = { version = "2.0.52", features = ["extra-traits", "full", "parsing", "printing"] }
toml = { version = "0.8.8", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.13"
