[package]
name = "cargo-osdk"
version = "0.8.2"
edition = "2021"
description = "Accelerate OS development with Asterinas OSDK"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/asterinas/asterinas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.linux-bzimage-builder]
# The path for local development
path = "../ostd/libs/linux-bzimage/builder"
# The version specified here is used for publishing on crates.io.
# Please update this version when publishing the cargo-osdk crate
# if there have been any changes to the dependent crate.
version = "0.2.0"

[dependencies]
clap = { version = "4.4.17", features = ["cargo", "derive"] }
env_logger = "0.11.0"
indexmap = "2.2.1"
lazy_static = "1.4.0"
log = "0.4.20"
quote = "1.0.35"
regex = "1.10.4"
rev_buf_reader = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
shlex = "1.3.0"
syn = { version = "2.0.52", features = ["extra-traits", "full", "parsing", "printing"] }
toml = { version = "0.8.8", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.13"
