[package]
name = "aster-runner"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = { version = "4.3.19", features = ["derive"] }
linux-bzimage-builder = { path = "../framework/libs/linux-bzimage/builder" }
rand = "0.8.5"
xmas-elf = "0.8.0"
