[package]
name = "jinux"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = {version="0.10.12"}
jinux-frame = {path = "framework/jinux-frame"}
jinux-std = {path = "services/libs/jinux-std"}

[workspace]

members = [
    "jinux-boot",
    "framework/jinux-frame",
    "framework/pod",
    "framework/pod-derive",
    "services/comps/jinux-pci",
    "services/comps/jinux-virtio",
    "services/libs/jinux-std",
    "services/libs/jinux-rights-proc",
    "services/libs/typeflags",
    "services/libs/typeflags-util",
    "services/libs/jinux-util",
]

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xFFFF800000000000"
