[package]
name = "jinux"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.1.10"
jinux-frame = { path = "framework/jinux-frame" }
jinux-std = { path = "services/libs/jinux-std" }
component = { path = "services/comp-sys/component" }

[dev-dependencies]
x86_64 = "0.14.2"
jinux-time = { path = "services/comps/time" }
jinux-framebuffer = { path = "services/comps/framebuffer" }

[workspace]

members = [
    "boot",
    "framework/jinux-frame",
    "services/comps/pci",
    "services/comps/virtio",
    "services/comps/input",
    "services/comps/block",
    "services/comps/framebuffer",
    "services/comps/time",
    "services/libs/jinux-std",
    "services/libs/jinux-rights-proc",
    "services/libs/typeflags",
    "services/libs/typeflags-util",
    "services/libs/jinux-util",
    "services/libs/cpio-decoder",
]

exclude = ["services/comp-sys/controlled", "services/comp-sys/cargo-component"]
