[package]
name = "jinux-frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
cfg-if = "1.0"
spin = "0.9.4"
volatile = { version = "0.4.5", features = ["unstable"] }
buddy_system_allocator = "0.9.0"
pod = { git = "https://github.com/jinzhao-dev/pod", rev = "71e59ec" }
align_ext = { path = "../libs/align_ext" }
intrusive-collections = "0.9.5"
log = "0.4"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
trapframe = { git = "https://github.com/Hsy-Intel/trapframe-rs", rev = "fe6fc6e" }
inherit-methods-macro = { git = "https://github.com/jinzhao-dev/inherit-methods-macro", rev = "98f7e3e" }
multiboot2 = "0.16.0"
tdx-guest = { path = "../libs/tdx-guest", optional = true }

[target.x86_64-custom.dependencies]
x86_64 = "0.14.2"
x86 = "0.52.0"
acpi = { git = "https://github.com/Hsy-Intel/acpi.git", rev = "109aecb" }
aml = "0.16.3"

[features]
intel_tdx = ["dep:tdx-guest"]
