[package]
name = "osdk-test-kernel"
version = "0.10.3"
edition = "2021"
description = "The OSTD-based kernel for running unit tests with OSDK."
license = "MPL-2.0"
repository ="https://github.com/asterinas/asterinas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ostd = { version = "0.10.3", path = "../../ostd" }
owo-colors = "4.0.0"
